# laughing-octo-waffle

./: .env.example  LICENSE  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
17_On_Prem_Agent/: =0.0.1  =0.27.2  =0.61.0  =0.7.0  =0.7.9  =1.11.1  =2.43.0  =3.16.1  pyproject.toml  requirements.txt  setup_fresh.sh  setup_models.sh  test_model.py
17_On_Prem_Agent/app/: server.py
17_On_Prem_Agent/qdrant_storage/: raft_state.json
17_On_Prem_Agent/qdrant_storage/collections/DnD_Documents/: config.json
17_On_Prem_Agent/qdrant_storage/collections/DnD_Documents/0/: newest_clocks.json  replica_state.json
17_On_Prem_Agent/qdrant_storage/collections/DnD_Documents/0/segments/06e89020-f0ab-478d-9dd3-517d8a04fd02/: mutable_id_tracker.mappings  mutable_id_tracker.versions
17_On_Prem_Agent/qdrant_storage/collections/DnD_Documents/0/segments/10893b88-0ced-4092-b42b-a14903169bca/: mutable_id_tracker.mappings  mutable_id_tracker.versions
17_On_Prem_Agent/qdrant_storage/collections/DnD_Documents/0/segments/22a8471b-adf5-4acf-954c-161377059c7d/: mutable_id_tracker.mappings  mutable_id_tracker.versions
17_On_Prem_Agent/qdrant_storage/collections/DnD_Documents/0/segments/666283f9-83ee-406e-b127-d6cfdd04dd84/: mutable_id_tracker.mappings  mutable_id_tracker.versions
17_On_Prem_Agent/qdrant_storage/collections/DnD_Documents/0/segments/7e4e77e0-c903-4915-ad04-2878be61df75/: mutable_id_tracker.mappings  mutable_id_tracker.versions
17_On_Prem_Agent/qdrant_storage/collections/DnD_Documents/0/wal/: first-index
(+142 files in other folders)
